<resources>
    <string name="app_name">Chess Health Exam</string>
    <string name="action_reset">Reset Database</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">Chess Health Exam</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_person">Add Person</string>
    <string name="add_person_hint">Enter a name</string>
    <string name="submit">Submit</string>
    <string name="add_person_error_hint">You must enter a name</string>
    <string name="search">Search</string>
    <string name="search_hint">Search People</string>
    <string name="header_name">Name</string>
    <string name="header_details">Details</string>
    <string name="filter_people">Filter People</string>
    <string name="age_format">Age: %1$d</string>
    <string name="gender_format">Gender: %1$s (%2$s)</string>
    <string name="country_code_format">Country code: %1$s (%2$s)</string>
    <string name="country_code_unknown">Country code: N/A</string>
    <string name="probability">Probability</string>
    <string name="filter_country_hint">Country code</string>
    <string name="min_age_hint">Min. Age</string>
    <string name="max_age_hint">Max. Age</string>
    <string name="sort_indicator">Sort Indicator</string>
    <string name="clear_search">Clear Search</string>
    <string name="age_label"><b>Age</b></string>
    <string name="gender_label"><b>Gender</b></string>
    <string name="country_code_label"><b>Country Code</b></string>
    <string name="argument_title">title</string>
    <string name="detail_format">%1$s (%2$s)</string>
    <string name="detail_unknown">N/A</string>
    <string name="flag">Flag</string>
    <string name="error_reset">There was an error resetting the database.</string>
    <string name="error_database">There was an error reading the database.</string>
    <string name="error_delete">There was an error deleting a record from the database.</string>
    <string name="error_insert">There was an error inserting a record in the database.</string>
    <string name="errpr_network">There was an error communicating with the API.</string>

    <string-array name="seed_names">
        <item>Brendan</item>
        <item>Tim</item>
        <item>Sanika</item>
        <item>Eric</item>
        <item>Nick</item>
        <item>Jason</item>
        <item>Anthony</item>
        <item>Vidit</item>
        <item>Joey</item>
    </string-array>
</resources>