<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anilson.chesshealthexam.ui.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_search"
        android:title="@string/clear_search"
        android:icon="@drawable/ic_baseline_cancel_24"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />
</menu>