<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstFragment">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/header_text_size"
        android:text="@string/header_name"/>

    <ImageView
        android:id="@+id/sortIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/nameLabel"
        app:layout_constraintBottom_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toEndOf="@id/nameLabel"
        android:contentDescription="@string/sort_indicator"
        android:src="@drawable/ic_baseline_arrow_downward_24" />

    <TextView
        android:id="@+id/detailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameLabel"
        android:textSize="@dimen/header_text_size"
        android:text="@string/header_details" />

    <ImageView
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/filter_people"
        android:src="@drawable/ic_baseline_filter_alt_24"/>

    <EditText
        android:id="@+id/filterMinAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:hint="@string/min_age_hint"
        android:inputType="number"
        android:maxLength="3"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/filterMaxAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toEndOf="@id/filterMinAge"
        app:layout_constraintEnd_toStartOf="@id/countryCodeFilter"
        android:visibility="gone"
        tools:visibility="visible"
        android:hint="@string/max_age_hint"
        android:inputType="number"
        android:maxLength="3"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/countryCodeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toEndOf="@id/filterMaxAge"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:hint="@string/filter_country_hint"
        android:maxLength="2"
        android:inputType="text"
        android:importantForAutofill="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryCodeFilter"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_person"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>